apn-stack/apn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apn-ingress
  namespace: apn-stack
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"  
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx

  rules:
  - host: apn.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lighttpd
            port:
              number: 80
  - host: rvanaken.duckdns.org
    http:
      paths:              
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: lighttpd
            port:
              number: 80
